--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ frontend/dist/
 *~
 
 # Environment
-.env
+frontend/.env
 .env.local
 .env.*.local
 
@@ -53,3 +53,13 @@ docker-compose.override.yml
 # Uploads
 uploads/*
 !uploads/.gitkeep
+.jpg
+.txt
+.png
+.sql
+.pdf
+.xml
+.iml
+.gitignore
+.dockerignore
+.idea
