--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,6 +15,9 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
+# Create an application user that matches OpenShift's random UID/GID expectations
+RUN useradd --uid 1001 --gid 0 --no-create-home --shell /usr/sbin/nologin appuser
+
 # Set working directory
 WORKDIR /app
 
@@ -27,7 +30,9 @@ RUN pip install --no-cache-dir --upgrade pip && \
 COPY backend/ ./backend/
 
 # Create necessary directories
-RUN mkdir -p /app/uploads /app/logs /app/data
+RUN mkdir -p /app/uploads /app/logs /app/data && \
+    chown -R 0:0 /app && \
+    chmod -R g+rwX /app
 
 # Expose port
 EXPOSE 8000
@@ -35,6 +40,9 @@ EXPOSE 8000
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
+
+# Drop privileges to the non-root user (OpenShift will still be able to override the UID if needed)
+USER 1001
 
 # Run the application
 CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
