--- a/helm/bms/templates/frontend-service.yaml
+++ b/helm/bms/templates/frontend-service.yaml
@@ -1,19 +1,15 @@
-{{- if .Values.frontend.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "bms.fullname" . }}-frontend
-  labels:
-    {{- include "bms.frontend.labels" . | nindent 4 }}
+  name: frontend
+
 spec:
-  type: {{ .Values.frontend.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ .Values.frontend.service.port }}
+    - port: 5432
       targetPort: http
       protocol: TCP
       name: http
-  selector:
-    {{- include "bms.frontend.selectorLabels" . | nindent 4 }}
-{{- end }}
+
 
 
