--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,9 @@
 FROM python:3.11-slim
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-ENV DEBIAN_FRONTEND=noninteractive
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    DEBIAN_FRONTEND=noninteractive
 
 # Install system dependencies including PostgreSQL client for health checks
 RUN apt-get update && apt-get install -y \
@@ -26,8 +26,9 @@ RUN pip install --no-cache-dir --upgrade pip && \
 # Copy backend source code
 COPY backend/ ./backend/
 
-# Create necessary directories
-RUN mkdir -p /app/uploads /app/logs /app/data
+# Create necessary directories with proper permissions
+RUN mkdir -p /app/uploads /app/logs /app/data && \
+    chmod -R 755 /app/uploads /app/logs /app/data
 
 # Expose port
 EXPOSE 8000
@@ -37,4 +38,5 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Run the application
-CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# All environment variables will be injected via docker-compose
+CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--proxy-headers"]
