--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,40 +1,153 @@
-worker_processes  auto;
+server {
+    # Render משתמש בפורט 10000 כברירת מחדל
+    listen 10000;
+    listen [::]:10000;
 
-# השורות הללו יתווספו אוטומטית ע"י ה-sed ב-Dockerfile:
-# pid /tmp/nginx.pid;
-# error_log  /var/log/nginx/error.log warn;
+    server_name _;
 
-events {
-    worker_connections  1024;
-}
+    root /usr/share/nginx/html;
+    index index.html;
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    # Compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1000;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript
+               application/json application/javascript application/xml+rss
+               application/x-javascript image/svg+xml;
 
-    sendfile        on;
-    keepalive_timeout  65;
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-    server {
-    listen 8000;
-    server_name  localhost;
-    root   /usr/share/nginx/html;
-    index  index.html;
+    # --- בדיקה לווידוא שהקונפיגורציה נטענה ---
+    add_header X-Custom-Config-Loaded "Yes-V8-Proxy-FinalFix" always;
 
+    # Render health check endpoint
+    location /health {
+        access_log off;
+        return 200 "OK";
+        add_header Content-Type text/plain;
+    }
+
+    # Static files - aggressive caching
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|webp|avif)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
+    # Service Worker - no cache!
+    location ~* (service-worker\.js|sw\.js)$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        expires 0;
+    }
+
+    # API proxy - forwards /api/v1/* requests to the backend
+    # This allows the frontend to use relative paths like /api/v1/projects
     location /api/v1/ {
-        proxy_pass http://project-manager-bms-backend.at-yossi-dev:8000/api/v1/;
+        # Logging - log all API requests for debugging
+        access_log /var/log/nginx/api_access.log;
+        error_log /var/log/nginx/api_error.log debug;
+        
+        # Backend service URL on Render
+        # IMPORTANT: When proxy_pass has a trailing slash, nginx replaces the matched location
+        # So /api/v1/projects becomes https://backend-url/api/v1/projects
+        proxy_pass https://project-menager-1-1-0.onrender.com/api/v1/;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        # Use the backend's host, not the frontend's host
+        proxy_set_header Host project-menager-1-1-0.onrender.com;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port 10000;
+        # Prevent backend from generating redirects to frontend domain
+        proxy_set_header X-Original-Host $host;
+        proxy_set_header X-Original-URI $request_uri;
+        proxy_cache_bypass $http_upgrade;
+
+        # Don't buffer responses - important for streaming
+        proxy_buffering off;
+
+        # SSL configuration for upstream connection
+        # These settings ensure proper SSL handshake with the backend
+        proxy_ssl_server_name on;
+        proxy_ssl_name project-menager-1-1-0.onrender.com;
+        proxy_ssl_verify off;  # Disable SSL verification for Render (they use valid certs)
+        proxy_ssl_protocols TLSv1.2 TLSv1.3;
+        proxy_ssl_ciphers HIGH:!aNULL:!MD5;
+
+        # Timeouts - increased for Render's cold starts
+        proxy_connect_timeout 90s;
+        proxy_send_timeout 90s;
+        proxy_read_timeout 90s;
+
+        # --- FIX for 307 Redirects / Mixed Content ---
+        # CRITICAL: Order matters! More specific patterns must come first
+        # The backend returns redirects like: http://bms-project-frontend.onrender.com:10000/api/v1/projects/
+        # We need to convert ALL of these to relative paths to avoid Mixed Content errors
+        
+        # 1. FIRST: Handle the most specific case - redirects to frontend domain with port 10000 and path
+        # This is the main issue causing Mixed Content errors
+        proxy_redirect ~^http://[^/]+:10000/api/v1/(.*)$ /api/v1/$1;
+        proxy_redirect ~^https://[^/]+:10000/api/v1/(.*)$ /api/v1/$1;
+        proxy_redirect ~^http://$host:10000/api/v1/(.*)$ /api/v1/$1;
+        proxy_redirect ~^https://$host:10000/api/v1/(.*)$ /api/v1/$1;
+        
+        # 2. Handle redirects to frontend domain with port 10000 (base paths)
+        proxy_redirect http://$host:10000/api/v1/ /api/v1/;
+        proxy_redirect https://$host:10000/api/v1/ /api/v1/;
+        proxy_redirect http://$host:10000/api/v1 /api/v1;
+        proxy_redirect https://$host:10000/api/v1 /api/v1;
+        proxy_redirect http://$host:10000/ /api/v1/;
+        proxy_redirect https://$host:10000/ /api/v1/;
+        
+        # 3. Handle redirects to frontend domain without port (if backend uses X-Forwarded-Host)
+        proxy_redirect ~^http://[^/]+/api/v1/(.*)$ /api/v1/$1;
+        proxy_redirect ~^https://[^/]+/api/v1/(.*)$ /api/v1/$1;
+        proxy_redirect http://$host/api/v1/ /api/v1/;
+        proxy_redirect https://$host/api/v1/ /api/v1/;
+        proxy_redirect http://$host/api/v1 /api/v1;
+        proxy_redirect https://$host/api/v1 /api/v1;
+        
+        # 4. Handle redirects from backend domain
+        proxy_redirect http://project-menager-1-1-0.onrender.com/api/v1/ /api/v1/;
+        proxy_redirect https://project-menager-1-1-0.onrender.com/api/v1/ /api/v1/;
+        proxy_redirect http://project-menager-1-1-0.onrender.com/ /api/v1/;
+        proxy_redirect https://project-menager-1-1-0.onrender.com/ /api/v1/;
+        
+        # 5. Catch-all for any other redirect patterns (must be last)
+        proxy_redirect ~^https?://[^/]+/api/v1/(.*)$ /api/v1/$1;
+        proxy_redirect ~^https?://[^/]+/api/v1$ /api/v1;
+        
+        # Custom headers for debugging
+        add_header X-Proxy-Request-URI $request_uri always;
+        add_header X-Proxy-Backend-Host project-menager-1-1-0.onrender.com always;
+        add_header X-Proxy-Frontend-Host $host always;
+        
+        # Error handling
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_next_upstream_tries 2;
     }
 
-    # טיפול ב-Front-end (SPA)
+    # React Router - MUST BE LAST!
     location / {
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        expires 0;
     }
 
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
+    # Custom error pages
+    error_page 404 /index.html;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
