--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,3 +19,12 @@ cryptography==42.0.5
 boto3
 botocore
 openpyxl==3.1.2
+
+# Testing dependencies
+pytest==8.3.3
+pytest-asyncio==0.24.0
+pytest-cov==5.0.0
+pytest-mock==3.14.0
+httpx==0.27.2
+faker==28.0.0
+aiosqlite==0.20.0
