--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,22 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.4.5",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/react-hooks": "^8.0.1",
+    "vitest": "^2.1.3",
+    "@vitest/ui": "^2.1.3",
+    "jsdom": "^25.0.1",
+    "@vitest/coverage-v8": "^2.1.3"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   }
 }
