--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,16 @@
-fastapi==0.115.2
-uvicorn[standard]==0.30.6
-pydantic==2.9.2
-pydantic-core==2.23.4
-SQLAlchemy==2.0.36
-asyncpg==0.29.0
-psycopg2-binary==2.9.9
-alembic==1.13.3
-python-jose==3.3.0
-passlib[bcrypt]==1.7.4
+fastapi
+uvicorn[standard]
+pydantic
+pydantic-core
+SQLAlchemy
+asyncpg
+psycopg2-binary
+alembic
+python-jose
+passlib[bcrypt]
 python-multipart==0.0.9
 email-validator==2.2.0
-bcrypt==4.1.3
+bcrypt==3.2.2
 python-dotenv==1.0.1
 httpx==0.27.2
 python-dateutil==2.9.0
@@ -20,7 +20,6 @@ boto3
 botocore
 openpyxl==3.1.2
 
-# Testing dependencies
 pytest==8.3.3
 pytest-asyncio==0.24.0
 pytest-cov==5.0.0
