--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,11 @@
-# Backend Dockerfile for Project Management System
+# Backend Dockerfile
 FROM python:3.11-slim
 
-# Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     DEBIAN_FRONTEND=noninteractive
 
-# Install system dependencies including PostgreSQL client for health checks
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
@@ -15,18 +14,19 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Set working directory
 WORKDIR /app
 
-# Copy requirements and install Python dependencies
-COPY backend/requirements.txt ./
+# Copy requirements (assuming build context is project root)
+COPY backend/requirements.txt .
+
+# Install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
-# Copy backend source code
+# Copy backend source code (assuming build context is project root)
 COPY backend/ ./backend/
 
-# Create necessary directories with proper permissions
+# Create necessary directories
 RUN mkdir -p /app/uploads /app/logs /app/data && \
     chmod -R 755 /app/uploads /app/logs /app/data
 
@@ -38,5 +38,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Run the application
-# All environment variables will be injected via docker-compose
 CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--proxy-headers"]
