--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,8 +9,8 @@ WORKDIR /app
 COPY /package*.json ./
 
 # Install dependencies
-RUN npm ci
-
+# Install dependencies
+RUN npm ci --legacy-peer-deps
 # Copy source
 COPY . .
 
