--- a/frontend/nginx.conf.template
+++ b/frontend/nginx.conf.template
@@ -56,7 +56,7 @@ server {
         # Backend service URL on Render
         # IMPORTANT: When proxy_pass has a trailing slash, nginx replaces the matched location
         # So /api/v1/projects becomes https://backend-url/api/v1/projects
-        proxy_pass ${BACKEND_URL}/api/v1/;
+        proxy_pass ${VITE_API_URL}/api/v1/;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
