--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,6 +14,8 @@ RUN npm ci --legacy-peer-deps
 # Copy source
 COPY . .
 
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
 # Build the app
 RUN npm run build
 
